--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -27,6 +27,9 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "cryptiles": "^4.1.3",
+    "extend": "^3.0.2",
+    "hoek": "^6.1.3",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.29"
